corrigiendo nombre de repositorio de docker aacp9/devops-integracion

--- a/kubernetes-monitor/deployment-proyectdevops-fullstack-jenkins.yaml
+++ b/kubernetes-monitor/deployment-proyectdevops-fullstack-jenkins.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: proyectdevops-fullstack-jenkins
-          image: aacp9/DevopsTestMerge       
+          image: aacp9/devops-integracion       
           ports:
             - containerPort: 9090
               name: proyectdevops  # updated port name
