--- a/kubernetes-monitor/deployment-proyectdevops-fullstack-jenkins.yaml
+++ b/kubernetes-monitor/deployment-proyectdevops-fullstack-jenkins.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: proyectdevops-fullstack-jenkins
-          image: bellyster/devops-integracion       
+          image: aacp9/docker-repository       
           ports:
             - containerPort: 9090
               name: proyectdevops  # updated port name
